JS: get rid of IOException in SourceWriter and related classes